# Advanced_RAG_Retrieval_Comparison

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  setup_project.py  streamlit_app.py
data/: README.md
notebooks/: experiment.ipynb
src/: __init__.py  config.py  embeddings.py  llm.py  utils.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/retrievers/: __init__.py  auto_merging_retriever.py  basic_retriever.py  sentence_window_retriever.py
tests/: test_config.py  test_retrievers.py  test_utils.py
