[project]
name = "advanced-rag-comparison"
version = "0.1.0"
description = "Advanced RAG retrieval methods comparison using LlamaIndex, RAGAS, and Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "ragas>=0.1.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src"]
